[package]
name = "donv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version="0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nvml-wrapper = "0.9"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
tokio-tungstenite = "0.21"
futures = "0.3"
